@@ -2,15 +2,17 @@
 Hash: SHA256
 
 DIST st-0.4.1.tar.gz 32947 SHA256 ee2f93c6d8cd95a5ab47423eeebde4a474be470309ceee33fa3c7757eae2bf31 SHA512 06a75cdf7d22c64c1331276b0f58577c3c42c1c2edcb41a33a3c37f7b65bd284a3b006dd94e0dc081f42f028dd18b60f278e8b3f33a1cf6611b1398bff80df7d WHIRLPOOL ef59a069eaceaa8ed606913645525b5bf44828f5e82cc024f802a0f4bd1962a6df01253dd1787aacf0bdefb94071792551b3362a0d3e7326ac4cceb718fc8272
+DIST st-0.5.tar.gz 36710 SHA256 ae80ddfaf8146f7665772efc9b85e05e08be5087682a689ecdf71aa4d4bfdd4e SHA512 fb5d3b6dfb56f35c60a83164d0da2aef67d9fc23b81fdd7c26b9a618c92524a601db5fc4149a3a5054ca3306ecc80e104fa629ecb1516c047a726012237c83d5 WHIRLPOOL 90083bfaca02f7507e706c4d251736b300553e95c12640d948a8a5c273c5339b2080e34d54113a69e7cd0d083207634c645a55744c443efe77a2f7b40a82f9ad
 EBUILD st-0.4.1-r1.ebuild 1460 SHA256 be7fce74426aa675f47ef8fabde02bc543216e41714a306e9b7c8a4ea2393d61 SHA512 a0838cad7b086d8615984a9c5172490fe146f2d4d0c02d873bd5e1d2b5b1f2dba2cd8c17d7235dcab4904b94430cdeb156f20827c95f2293c8a69fcf7568dc68 WHIRLPOOL bd5d024e383c2f1ca443e90fdba25c50f616cbc7cd6a2c51aeaf662e9af7f498b9ff88582ac28c1348e15cc1404b1c9587322d0e6120b25c252326cd8df47098
 EBUILD st-0.4.1.ebuild 1357 SHA256 a133148866a26ad3387d83b4be3677abf2cf43db7c69b3d7b4dd66471eb53338 SHA512 5ce977e50d1a6269a1b10db3d85b373ab75ff24eca65b2c162db74f1f5896e73bf4e88611672af4654060289d74c84ffe57924982465b0fa7cad9d6128f8cd46 WHIRLPOOL 402eb480a5b02d4be0f4985c876f8562d86597296fce2412e44b626e1b8dc16a9f52dfe76b671c1e8ae3adc420693b712321c513410a61ee57afb2e0b9ce0d5e
+EBUILD st-0.5.ebuild 1455 SHA256 aed7f52be9b38db7fdb74c285488c3164f5d6c26f37cf298d3dbcb5838d84325 SHA512 80cb452c42c2a5808836dbf2fd3f69751689ab7597c301c8b472f4cc2cd141c7dc907332a2ea0a7f267ce205c7308236e451a2e67fbe8355d45564a25f5b99be WHIRLPOOL 65abe66ac265ca11fb3066e5c262a9c97786145fb27f9ecd0316db44fe100e039d0d66ceb92b20c2c4ad171d0688e464c9251d2dcdc98f7c80ea503ca2fbe69a
 EBUILD st-9999.ebuild 1542 SHA256 fdaf561dac61e9ad228f91edc621f82e18595af7fc3c7cd2ef81494ff0a3585a SHA512 ca0b5b8367463b5b84c88e8c8547f0e4fe01e03744b020783d7ec05a028f95e6649825c3306a0523b5e18da36e23cecbc9a008d016ac736da502cdb3b4ebdc25 WHIRLPOOL 61ece856f2f5c474aa8d3cfcdb7874a250935f705aee79d3e0199aa2dec54a38ebbbbb30de1adbc2012658bfdb939f65cbda57adb098ec379787503187be6fd0
-MISC ChangeLog 2705 SHA256 0a00ca1cfd1bf979de12ef490f21e10e1ec9ef4158c4712c600770f46dc9aa88 SHA512 a63b5b16c395475b1ef002594e00a0f63e01f3d5652223ec44c1ea99672cedeaae689cce870c68fc48737205b85bd190903218aad8fd5a6ce8cb2f42fec26f90 WHIRLPOOL 100011fc833b2438100001f4c67ce5dc9ad76fdf9e2bfff1fe8f2dd3604a1d2fb7779d13da2eb0260c71bb577848f3713595965f0ab96353908fef068005d38d
+MISC ChangeLog 2808 SHA256 d7a145eb30d7e16c47f6ee35a5e89af7da146904f05d67aba1174d3e729ee884 SHA512 dd7f0e58f41e2d60cf6c5edb953c40982501a34ec8ecd53973941eb1f46c0cbd7c8379aafdeebaf933cffd93ab3f7ecd92c6674dea8e3cd410ebbc59ca02a131 WHIRLPOOL 4915a3a998de48982f3d9ab51b21ec9efc399aa5c6422e6947b20e220aa55612d6fd0ee8a238e804e2a54a1a24cacb52b0e3d50aa88da1d5f6b0fc36939cabe1
 MISC metadata.xml 223 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d SHA512 c9f6a48b2aa05afdf73b8bd824c65480d76e54b659ca39928398c66f764d34faf186255d8aea034737424a962cf35151b610d078a01f8193b027c63e1e3c51b5 WHIRLPOOL 1ce20c98a7e177b8f510ef41f3935b0db5e04b2ecf465a683b2f2515f6a3043c33e6e9efc87f5aaaf59b2ed9be376d9d16bc8beff66b11aaa50ea899bfdc1f62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLLHbAACgkQVWmRsqeSphP3DwCfSO1vueUjetJyCaSWv4BhesUZ
-V30AnRtZHY6/MYAmpVLzk7zucHBbPVsX
-=bNz2
+iEYEAREIAAYFAlNBcKwACgkQVWmRsqeSphMzbACdGT9uEB4QDNN+QbPAftRDi0D5
+UJ8AmwfCRKhaAQVfMz64N6Y+TacpNyz2
+=xsMP
 -----END PGP SIGNATURE-----
