@@ -1,6 +1,11 @@
 # ChangeLog for x11-terms/st
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/st/ChangeLog,v 1.18 2014/01/06 21:18:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/st/ChangeLog,v 1.19 2014/04/06 15:20:11 jer Exp $
+
+*st-0.5 (06 Apr 2014)
+
+  06 Apr 2014; Jeroen Roovers <jer@gentoo.org> +st-0.5.ebuild:
+  Version bump.
 
   06 Jan 2014; Jeroen Roovers <jer@gentoo.org> st-0.4.1-r1.ebuild:
   Marked ~hppa too.
